# pipeline

./: .gitignore  setup.cfg
src/pipeline/: locator.py  task.py
tests/pipeline/: test_locator.py  test_task.py
tests/pipeline/resources/: pipeline.yaml
