[metadata]
name = pipeline
version = 0.0.1
author = Niels van Eldik
author_email = niels.vaneldik@axa.de
description = The pipeline module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    coverage